Date	Added
12/24
	* Fixed item-dup bug in storage and cart [MouseJstr]
	* @skilltree was looking outside of the particular class
	  of the char to see if they could do a skill [MouseJstr]
	* Fixed a calc_skill_tree bug where too many skills were
	  visible [MouseJstr]
	* Added Dev/GDB_reports.txt, take a look in it devs [Ajarn]
        * Corrected description for player_skill_nofootset and monster_skill_nofootset
          in battle_athena.conf [celest]
        * Added a special NPC Logging command 'logmes'. It works as mes"Hello world!"; 
	  It is useful for such NPC as BANKS, CASINO, etc. To keep track of won money, etc.
	  Check kafra_bank.txt 1.1 for example.
		Note:	mes = otput into client's NPC window
			debugmes = output into map-server window
			logmes = output into lognpc log DB.
12/23
	* Fixed some bugs in the clif.c changes (SVN 766 to SVN 767) [MouseJstr]
	* Added ayo monsters to @disguise
	* Began updated clif.c to work with 1108 and 1206, tested and works [nsstrunks]
        * Fixed skills still being available after a job change [MouseJstr]
        * Changed pc_alive_timer to use map_id2sd - should be more accurate [celest]
        * Added jA 1084's fix to mob.c - check whether the player is still alive
          when calculating exp [celest]
        * Added clif_changed_dir, clif_adopt_process [celest]
        * updated Backstab to show the target's new direction [celest]
        * Corrected the file types of several files in the SVN tree to
          fix the newline issues [MouseJstr]
	* Updated mapflags (added missing payon_in03,ayo_in01,ayo_in02, que_god01, que_god02) [Lupus]
        * Updated Sacrifice : it's now self-activating, and lasts for 5 attacks [celest]
        * Fixed compile errors in party.c [celest]
        * Moved SC_EDP back to 114 [celest]
        * Added some of Shinomori's fixes [celest]
        * Added optimisation in intif_parse_WisMessage from Freya [celest]

12/22
	* Eliminated skill tree mapping since we have entries